--- a/chat/static/chat/css/style.css
+++ b/chat/static/chat/css/style.css
@@ -8,6 +8,14 @@
     min-height: 1000px;
 }
 
+.hidden{
+    display: none;
+}
+
+.opacity{
+    visibility: hidden;
+}
+
 img {
     width: 100%;
     height: 100%;
@@ -29,6 +37,19 @@ img {
     padding: 10px;
 }
 
+.box-search{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.icon-back{
+    height: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    color: #aaa;
+}
+
 .search-user {
     margin-top: 10px;
     background-color: #f0f2f5;
@@ -38,6 +59,7 @@ img {
     display: flex;
     align-items: center;
     padding: 10px;
+    position: relative;
 }
 
 .search-user-input {
@@ -47,7 +69,34 @@ img {
     border: none;
     margin: 0 9px;
     flex: 1;
+    transition: all 0.25s;
 }
+
+.search-result{
+    position: absolute;
+    width: 360px;
+    max-height: calc(100vh - 20px - 10px - 73px);
+    height: calc(100vh - 20px - 10px - 73px);
+    background-color: white;
+    left: -35px;
+    bottom: 0;
+    transform: translateY(calc(100% + 10px));
+}
+
+.result-item{
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    gap: 10px;
+}
+
+.result-item:hover {
+    background-color: #e4e4e4;
+}
+
 
 .list-room {
     width: 100%;
@@ -84,7 +133,7 @@ img {
     padding: 5px 0;
 }
 
-.name-receiver {
+.name-receiver,.name-room {
     font-weight: bold;
 }
 
@@ -140,6 +189,7 @@ img {
     width: 100%;
     overflow: hidden;
     display: flex;
+    align-items: end;
     gap: 10px;
 }
 
@@ -154,8 +204,9 @@ img {
     max-width: 60%;
     background-color: #e4e4e4;
     word-break: break-all;
-    padding: 6px 10px;
-    border-radius: 15px;
+    padding: 8px 15px;
+    border-radius: 18px;
+    font-size: 18px;
 }
 
 .messenger-item.sender{
